test/golden/7211512577584578586.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:23:
  |
7 | main = putStrLn [fmt|{}|]
  |                       ^

unexpected "}"
expecting an haskell expression

    • In the quasi-quotation: [fmt|{}|]
  |
7 | main = putStrLn [fmt|{}|]
  |                      ^^^^
